# dcpl

./: .CMakeCache.txt  .cmake_install.cmake  CMakeLists.txt  README.md
examples/: CMakeLists.txt  Makefile  cmake_install.cmake
examples/genFile/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
examples/mpitransf/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
examples/seqtransf/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
test/: .io.cpp.swp  CMakeLists.txt  control.cpp  dcpl.cpp  get.cpp  io.cpp  main.cpp  reduce.cpp  transform.cpp  transform_complejo.cpp
